# fcfParallel

./: .gitignore  .gitmodules  Arg.hpp  BaseEngine.hpp  BasicExecutor.hpp  CMakeLists.txt  CPUEngine.hpp  Call.hpp  Executor.hpp  Extension.hpp  OpenCLEngine.hpp  README.md  Registrator.hpp  Task.hpp  Unit.hpp  include.hpp  macro.hpp  parallel.hpp  type.hpp
Details/: Distributor.hpp  Function.hpp  FunctionDescriptor.hpp  FunctionInfo.hpp  TupleCall.hpp  TupleLoop.hpp  fill.hpp
Extensions/function/: function.hpp
test/: CMakeLists.txt  DistributorTest.ipp  FunctionDescriptorTest.ipp  FunctionTest.ipp  SimpleEngineTest.ipp  fillTest.ipp  impl.cpp  macro.hpp  main.cpp  splitPackageTest.ipp
test/shared-link/: CMakeLists.txt  app-main.cpp  macro.hpp  shared.cpp
test/tests/: CMakeLists.txt  DistributorTest.cpp  DistributorTest.ipp  FunctionDescriptorTest.ipp  FunctionTest.ipp  SimpleEngineTest.ipp  fillTest.ipp  impl.cpp  main.cpp  splitPackageTest.ipp  types.ipp
test/tests/engine/: SimpleEngineTest.cpp  splitPackageTest.cpp
test/tests/extension/: exfuncTest.cpp
test/tests/inner/: DistributorTest.cpp  FunctionDescriptorTest.cpp  FunctionTest.cpp  fillTests.cpp
test/tests/types/: charTypesTest.cpp  doubleTypesTest.cpp  floatTypesTest.cpp  int64TypesTest.cpp  intTypesTest.cpp  intTypesTest.ipp  shortTypesTest.cpp
